sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: Boolean does not take parameters
				echange(i+1,i)
                                       ^