sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var n:Int= getNombreValeurs()
	var echange:Boolean = true
	while (echange) {
		echange=false
		for(i<-0 to n-2) {
			if (plusPetitQue(i+1,i)) {
				echange(i+1,i)
				echange = true
			}
		}
	}
}
